--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@ header{
     text-align: center;
     margin: 2%;
     height: 10vh;
-    color: ;
+
+}
+h1{
     font-weight: bold;
     font-size: 40px;
 }
@@ -82,10 +84,10 @@ main{
 
 
 footer {
-    width: 100%;
+    width: 100vw;
+    height: 10vh;
     text-align: center;
     font-size: 20px;   
-    height: 10vh;
     padding: 5px;
     margin: 3% 0;
 }
@@ -112,15 +114,19 @@ footer a{
     }
 
     main{
-        height: 80vh;
-        width: 100%;
+        height: 100vh;
+        width: 100vw;
+    }
+
+    h1{
+        font-size: 20px;
     }
 
 
     .card-front,
     .card-back{
         height: 100%;
-        width: 100%;
+        width: 90%;
         padding: 20px;
         position: absolute;
         border-radius: 5px;
@@ -134,10 +140,16 @@ footer a{
         margin: auto;
         display: flex;
         flex-wrap: wrap;
-        perspective: 1000px;
+        perspective: 800px;
     }
 
-
+    footer{
+        height: 100vh;
+        height: 100vw;
+    }
+    footer a{
+        font-size: 15px;
+    }
     
 
 
