--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body{
     font-family: 'Quicksand';
-    background-image: url("https://gifs.eco.br/wp-content/uploads/2022/05/gifs-de-super-mario-0.gif");
+    background-image: url("img/LOGO/backgroud.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -18,24 +18,39 @@ body{
 }
 header{
     text-align: center;
-    margin: 2%;
-    height: 10vh;
+    height: 15vh;
+    margin: 10px auto;
 
 }
+
 h1{
-    font-weight: bold;
-    font-size: 40px;
+    margin: 10px 0;
 }
+
+.div-logo{
+    height: 10vh;
+    margin-top: 2%;
+
+
+}
+
+#logo{
+    width: 50%;
+    height: 15%;
+}
+
 
 main{
     display: flex;
     height: 80vh;
+    width: 90%;
+    margin: 5% auto;
 }
 
 .memory-game{
     height: 640px;
     width: 640px;
-    margin: auto;
+    margin-top: 10%;
     display: flex;
     flex-wrap: wrap;
     perspective: 1000px;
@@ -46,7 +61,7 @@ main{
     width: calc(25% - 10px);
     margin: 5px;
     position: relative;
-    border: 5px solid white;
+    /* border: 5px solid white; */
     box-shadow: 1px 1px 1px 1px  black solid;
     cursor: pointer;
     transform: scale(1);
@@ -92,13 +107,26 @@ footer {
     padding: 5px;
     margin: 3% 0;
 }
+
 footer a{
-    margin: 2%;
+    color: black;
+}
+
+
+#desenvolvedor{
+    margin: 1%;
     font-size: 40px;
     color: black;
     font-weight: bold;
    
 }
+
+#design{
+    font-size: 20px;
+    color: black;
+    font-weight: bold;
+}
+
 
 /* Parte Mobile */
 @media only screen 
