--- a/style.css
+++ b/style.css
@@ -40,17 +40,19 @@ h1{
 }
 
 
-main{
+/* main{
     display: flex;
     height: 80vh;
     width: 90%;
-    margin: 5% auto;
-}
+    margin: 2% auto;
+} */
 
 .memory-game{
+    display: flex;
     height: 640px;
     width: 640px;
-    margin-top: 10%;
+    margin: auto auto 5% auto;
+    margin-top: 10% ;
     display: flex;
     flex-wrap: wrap;
     perspective: 1000px;
@@ -101,11 +103,9 @@ main{
 
 footer {
     width: 100vw;
-    height: 10vh;
+    height: 15vh;
     text-align: center;
-    font-size: 20px;   
-    padding: 5px;
-    margin: 3% 0;
+    margin: 2% 0;
 }
 
 footer a{
@@ -115,15 +115,13 @@ footer a{
 
 #desenvolvedor{
     margin: 1%;
-    font-size: 40px;
-    color: black;
+    font-size: 30px;
     font-weight: bold;
    
 }
 
 #design{
-    font-size: 20px;
-    color: black;
+    font-size: 15px;
     font-weight: bold;
 }
 
@@ -134,11 +132,12 @@ footer a{
   and (max-device-width: 812px) {
 
     body{
-        background-image: url("https://gifs.eco.br/wp-content/uploads/2022/05/gifs-de-super-mario-0.gif");
+        background-image: url("img/LOGO/backgroud.png");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         text-transform: uppercase;
+        height: 110vh;
     
     }
 
@@ -171,13 +170,30 @@ footer a{
         flex-wrap: wrap;
         perspective: 800px;
     }
+   
 
-    footer{
-        height: 100vh;
-        height: 100vw;
+    footer {
+        width: 100vw;
+        height: 10vh;
+        text-align: center;
+        margin: 2% 0;
     }
+    
     footer a{
-        font-size: 15px;
+        color: black;
+    }
+    
+    
+    #desenvolvedor{
+        margin: 1%;
+        font-size: 20px;
+        font-weight: bold;
+       
+    }
+    
+    #design{
+        font-size: 10px;
+        font-weight: bold;
     }
     
 
