--- a/style.css
+++ b/style.css
@@ -141,6 +141,12 @@ footer a{
     
     }
 
+    .div-logo{
+        height: 10vh;
+        margin: 15%;
+    
+    }
+
     main{
         height: 100vh;
         width: 100vw;
@@ -151,6 +157,17 @@ footer a{
     }
 
 
+ 
+    .memory-game{
+        height: 400px;
+        width: 400px;      
+        margin: auto;
+        margin-top: 0;
+        display: flex;
+        flex-wrap: wrap;
+        perspective: 800px;
+    }
+
     .card-front,
     .card-back{
         height: 100%;
@@ -158,25 +175,16 @@ footer a{
         padding: 3px;
         position: absolute;
         border-radius: 5px;
-        /* background-color: violet; */
         backface-visibility: hidden;   /* Propriedade que retira o verso da carta8*/
     }
     
-    .memory-game{
-        height: 400px;
-        width: 400px;
-        margin: auto;
-        display: flex;
-        flex-wrap: wrap;
-        perspective: 800px;
-    }
    
 
     footer {
         width: 100vw;
         height: 10vh;
         text-align: center;
-        margin: 2% 0;
+        margin-top: 10%;
     }
     
     footer a{
